implemented WebRTC Peer connection management and signaling service using firebase firestore

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>lit-element code sample</title>
-</head>
-<body>
-  <my-element></my-element>
-  <div id='root'></div>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
