--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <style class="document-style">
+      html {
+        --mdc-theme-primary: #1A567B;
+        --mdc-theme-secondary: #1A567B;
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <app-root></app-root>
